--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>The Ball Game</h1>
     <div class="ball" onclick="onBallClick()">100</div>
     <script src="main.js"></script>
+    <script src="util.js"></script>
     
 </body>
 </html>
