--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>The Ball Game</h1>
-    <div class="ball" onclick="onBallClick()">100</div>
-    <div class="ball2" onclick="onBallClick()">100</div>
+    <div class="ball" onclick="onBallClick(400,this)">100</div>
+    <div class="ball2" onclick="onBallClick(600,this)">100</div>
     <script src="main.js"></script>
     <script src="util.js"></script>
     
